Bug 205750 - IconLoadingClient::getLoadDecisionForIcon() leaks an Objective-C block
Summary: IconLoadingClient::getLoadDecisionForIcon() leaks an Objective-C block
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-01-03 14:05 PST by Garrett Davidson
Modified: 2020-01-03 18:44 PST (History)
6 users (show)

See Also:


Attachments
Patch (2.06 KB, patch)
2020-01-03 14:11 PST, Garrett Davidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Garrett Davidson 2020-01-03 14:05:17 PST
<rdar://problem/57981723>
Comment 1 Garrett Davidson 2020-01-03 14:11:05 PST
Created attachment 386715 [details]
Patch
Comment 2 WebKit Commit Bot 2020-01-03 17:00:57 PST
The commit-queue encountered the following flaky tests while processing attachment 386715 [details]:

imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/error-type-1.html bug 205242 (author: cdumez@apple.com)
The commit-queue is continuing to process your patch.
Comment 3 WebKit Commit Bot 2020-01-03 17:00:58 PST
The commit-queue encountered the following flaky tests while processing attachment 386715 [details]:

The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2020-01-03 18:44:15 PST
Comment on attachment 386715 [details]
Patch

Clearing flags on attachment: 386715

Committed r254027: <https://trac.webkit.org/changeset/254027>
Comment 5 WebKit Commit Bot 2020-01-03 18:44:16 PST
All reviewed patches have been landed.  Closing bug.