IconLoadingClient::getLoadDecisionForIcon() leaks an Objective-C block https://bugs.webkit.org/show_bug.cgi?id=205750 <rdar://problem/57981723>

Patch by Garrett Davidson <garrett_davidson@apple.com> on 2020-01-03
Reviewed by Wenson Hsieh.

Replace a Block_copy with makeBlockPtr to prevent leaking the ObjC block.

* UIProcess/Cocoa/IconLoadingDelegate.mm:
(WebKit::IconLoadingDelegate::IconLoadingClient::getLoadDecisionForIcon):

Canonical link: https://commits.webkit.org/218902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254027 268f45cc-cd09-0410-ab3c-d52691b4dbfc